syntax = "proto3";

package auth;
option go_package = "github.com/minhvuongrbs/financial-service-example";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/rpc/error_details.proto";

import "protoc-gen-swagger/options/annotations.proto";

service Auth {
	rpc RegisterUser (RegisterUserRequest) returns (RegisterUserReply){
		option (google.api.http) = {
			post: "/api/app/v1/auth/register"
			body: "*"
		};
	};

	rpc Login (LoginRequest) returns (LoginReply){
		option (google.api.http) = {
			post: "/api/app/v1/auth/login"
			body: "*"
		};
	};
}

message RegisterUserRequest {
	string full_name = 1; // required
	int64 phone_number = 2; // format: 84914293341, currently only support VN
	string email = 3;
	string username = 4;
	string password = 5;
	string birthday = 6; // format RFC3339, date only: 2012-08-20
	//	- Latest login
}
message RegisterUserReply {
	int32 code = 1;
	string message = 2;
}

message LoginRequest {
	string identity = 1;
	string password = 2;
}

message LoginReply {
	int32 code = 1;
	string message = 2;
	message Data {
		int64 user_id = 1;
		string token = 2;
	}
	Data data = 3;
}